# Web-Server

./: .gitignore  CMakeLists.txt  Readme.md  ~$Readme.md
cmake/: CodeCoverageReportConfig.cmake
configs/: ex_config  main_config  test_config
credentials/: login.html
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: config_parser.h  constants.h  header.h  mime_types.h  mock_session.h  profile_manager.h  reply.h  request.h  request_404_handler.h  request_api_handler.h  request_authentication_handler.h  request_echo_handler.h  request_error_handler.h  request_handler.h  request_handler_interface.h  request_health_handler.h  request_parser.h  request_sleep_handler.h  request_static_handler.h  server.h  session.h  session_interface.h
include/handler_factories/: api_handler_factory.h  authentication_handler_factory.h  echo_handler_factory.h  handler404factory.h  health_handler_factory.h  request_handler_factory.h  sleep_handler_factory.h  static_handler_factory.h
src/: config_parser.cc  mime_types.cc  profile_manager.cc  reply.cc  request_404_handler.cc  request_api_handler.cc  request_authentication_handler.cc  request_echo_handler.cc  request_error_handler.cc  request_health_handler.cc  request_parser.cc  request_sleep_handler.cc  request_static_handler.cc  server.cc  server_main.cc  session.cc
src/handler_factories/: api_handler_factory.cc  authentication_handler_factory.cc  echo_handler_factory.cc  handler404factory.cc  health_handler_factory.cc  sleep_handler_factory.cc  static_handler_factory.cc
static_files/coverage_info/: index.config_parser.cc.31098c8ab4b6825e0940ff3e3cd9edc0.html  index.html  index.include_request_handler_interface.h.html  index.include_request_parser.h.html  index.mime_types.cc.6d181b753146477d82916bc7f93f6799.html  index.reply.cc.c9374984234a99cf4fecdc8a0cbdf663.html  index.request_echo_handler.cc.7a48f0e8eb246fd1e4798246eca4c7b8.html  index.request_error_handler.cc.9e0e267e32d80d516749900d5a508ea1.html  index.request_handler_interface.h.5c31b0c48f6de553af20a74b05bee789.html  index.request_parser.cc.45123ad8d7efdcc613c2679afe26b1c1.html  index.request_parser.h.57d9887187b352638d38669a80309c4c.html  index.request_static_handler.cc.73d7421c37b2a9be0cf8bfb4b6fe1750.html  index.server.cc.520f4156117065a960e3087182acf4b4.html  index.session.cc.a39713a7caf4db9d7b5a9a5e778339b6.html  index.src_config_parser.cc.html  index.src_mime_types.cc.html  index.src_reply.cc.html  index.src_request_echo_handler.cc.html  index.src_request_error_handler.cc.html  index.src_request_parser.cc.html  index.src_request_static_handler.cc.html  index.src_server.cc.html  index.src_session.cc.html
tests/: api_integration_tests.sh  authentication_handler_test.cc  config_parser_test.cc  integ_test_example_expected  integ_test_example_text_expected  integ_test_html_res_expected  integ_test_valid_auth_signup_expected  integ_test_valid_req_expected  integration_tests.sh  mime_types_test.cc  reply_test.cc  request_404_handler_test.cc  request_api_handler_test.cc  request_echo_handler_test.cc  request_error_handler_test.cc  request_parser_test.cc  request_static_handler_test.cc  server_test.cc  session_test.cc
tests/credentials/: signup.html
